<resources>
    <string name="app_name">Pokemon</string>
    <string name="detail_pokemon">Pokemon Characteristics</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="pokemon_list">List of Pokemon</string>
    <string name="search">search</string>
    <string name="favorite">Favorite</string>
    <string name="all_pokemon">All Pokemon</string>
    <string name="favourites_pokemon">Favourites Pokemon</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="favourite">Favourite</string>
    <string name="pokemon_map">Map</string>
    <string name="pokemons">Pokemons</string>
    <string name="map">Map</string>
</resources>
