<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_all_poke"
            android:layout_width="@dimen/width_button_320dp"
            android:layout_height="wrap_content"
            android:text="@string/all_pokemon"
            android:textSize="@dimen/text_size_24sp" />

        <Button
            android:id="@+id/button_fav_poke"
            android:layout_width="@dimen/width_button_320dp"
            android:layout_height="wrap_content"
            android:text="@string/favourites_pokemon"
            android:textSize="@dimen/text_size_24sp" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="@dimen/width_button_320dp"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_map"
            android:textSize="@dimen/text_size_24sp" />
    </LinearLayout>
</FrameLayout>